[gd_scene load_steps=4 format=3 uid="uid://fkk44x8mc2tb"]

[ext_resource type="Script" path="res://inventory/ui/equipment_inventory_ui.gd" id="1_jo5v4"]
[ext_resource type="PackedScene" uid="uid://djiyrnncqjost" path="res://inventory/ui/slot_ui.tscn" id="1_kr7hv"]
[ext_resource type="Script" path="res://inventory/ui/equipment_slot_ui.gd" id="3_baowq"]

[node name="PlayerEquipmentUI" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -336.0
offset_bottom = 69.0
grow_horizontal = 0
script = ExtResource("1_jo5v4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 5

[node name="HelmetSlot" parent="MarginContainer/GridContainer" instance=ExtResource("1_kr7hv")]
layout_mode = 2
script = ExtResource("3_baowq")

[node name="ArmorSlot" parent="MarginContainer/GridContainer" instance=ExtResource("1_kr7hv")]
layout_mode = 2
script = ExtResource("3_baowq")

[node name="LeggingsSlot" parent="MarginContainer/GridContainer" instance=ExtResource("1_kr7hv")]
layout_mode = 2
script = ExtResource("3_baowq")

[node name="BootsSlot" parent="MarginContainer/GridContainer" instance=ExtResource("1_kr7hv")]
layout_mode = 2
script = ExtResource("3_baowq")

[node name="WeaponSlot" parent="MarginContainer/GridContainer" instance=ExtResource("1_kr7hv")]
layout_mode = 2
script = ExtResource("3_baowq")
